! Fix table header first child padding ! Fix fixed header overflow

--- a/scss/tables/table.scss
+++ b/scss/tables/table.scss
@@ -23,11 +23,13 @@ table {
     }
   }
 
+  th:first-child {
+    padding-left: 20px;
+  }
+
   &.mod-align-header {
-    th {
-      &:first-child {
-        padding-left: $header-padding;
-      }
+    th:first-child {
+      padding-left: $header-padding;
     }
 
     tbody tr td:first-child {
